--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
         }
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.0.2"
+        classpath 'com.android.tools.build:gradle:7.0.3'
         classpath "io.freefair.gradle:android-gradle-plugins:4.2.0-m1"
 
         // NOTE: Do not place your application dependencies here; they belong
