refs #32938 Text Input for Playground created and after push gamestart text output to log , layout not  perfect @1

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="false"
         android:theme="@style/Theme.ProjectTemplate">
         <activity
-            android:name="de.techfak.gse.dwenzel.MainActivity"
+            android:name="de.techfak.gse.dwenzel.GameStartActivity"
             android:exported="true"
             android:screenOrientation="landscape">
             <intent-filter>
