--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /shelf/
 /.idea/workspace.xml
 /app/build/
+/.idea/
 
 
 # Created by https://www.toptal.com/developers/gitignore/api/gradle,java,android
