closes #39910 @0.75 end card is implemnted , all prevouse activitys are closed and there is a new game button to jump through gamestart

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,11 @@
             android:exported="true"
             android:screenOrientation="landscape">
         </activity>
+        <activity
+            android:name="de.techfak.gse.dwenzel.end_screen.EndGameActivity"
+            android:exported="true"
+            android:screenOrientation="landscape">
+        </activity>
     </application>
 
 </manifest>
