--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,11 @@ android {
 }
 
 dependencies {
+    implementation 'org.jetbrains:annotations:16.0.2'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.1'
+    implementation 'org.nanohttpd:nanohttpd:2.3.1'
+    implementation 'com.android.volley:volley:1.2.0'
+    testImplementation 'io.rest-assured:rest-assured:4.4.0'
     implementation 'androidx.annotation:annotation:1.2.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
