--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:supportsRtl="false"
         android:theme="@style/Theme.ProjectTemplate" >
         <activity
-            android:name=".start_screen.controller.GameStartActivity"
+            android:name=".start_screen.controller.FirstStart"
             android:exported="true"
             android:screenOrientation="landscape" >
             <intent-filter>
@@ -21,12 +21,27 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".start_screen.controller.GameStartActivity"
+            android:exported="true"
+            android:screenOrientation="landscape" >
+        </activity>
+        <activity
             android:name=".game_screen.controller.BoardMainActivity"
             android:exported="true"
             android:screenOrientation="landscape" >
         </activity>
         <activity
+            android:name=".game_screen.controller.BoardMainSingleActivity"
+            android:exported="true"
+            android:screenOrientation="landscape" >
+        </activity>
+        <activity
             android:name=".end_screen.EndGameActivity"
+            android:exported="true"
+            android:screenOrientation="landscape" >
+        </activity>
+        <activity
+            android:name=".start_screen.controller.GameStartSingleActivity"
             android:exported="true"
             android:screenOrientation="landscape" >
         </activity>
